--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,10 @@
+/*SVG animation */
+svg path,
+svg rect{
+  fill: black;
+}
+
+
 .animated {
     -webkit-animation-duration: 1s;
     animation-duration: 1s;
